# rune

./: .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md  index.html  latest.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  release.yml
.rune/: settings.json
graphify-out/: .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
public/icons/: icon-map.json
scripts/: Dockerfile.builder  build-linux.ps1  build-linux.sh  docker-entrypoint.sh  generate-icons.py  generate-latest-json.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsh
src-tauri/src/: agent.rs  clipboard.rs  fs_utils.rs  git.rs  indexer.rs  lib.rs  main.rs  search.rs  system.rs  terminal.rs  window.rs
src/app/: EditorPane.tsx  MainLayout.tsx
src/components/: CommandPalette.tsx  ConfirmDialog.tsx  ContextMenu.tsx  PromptDialog.tsx  QuickPick.tsx  SettingsView.tsx  TerminalPanel.tsx  UpdaterPopup.tsx  WorkspaceSearch.tsx
src/contexts/: UIContext.tsx
src/hooks/: useActiveFileWatcher.ts  useActivityBar.ts  useAdaptiveMenu.ts  useAgent.ts  useAppCommands.ts  useAppStartup.ts  useBranchPicker.ts  useClickOutside.ts  useCodeMirror.ts  useCommandPalette.ts  useContextMenu.ts  useEditor.ts  useEditorActions.ts  useEditorPane.ts  useExplorerActions.ts  useFileAssociations.ts  useFileClipboard.ts  useFileSystem.ts  useFileTree.ts  useFileTreeNode.ts  useFindReplace.ts  useGit.ts  (+21 more)
(+92 files in other folders)
