[package]
name = "rune-editor"
version = "1.3.0"
description = "A lightweight, beautiful editor"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rune_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-dialog = "2"
portable-pty = "0.8"
dirs = "6"
regex = "1.12.3"
tauri-plugin-single-instance = "2.0.0-rc.0"
clipboard-rs = "0.3.4"
ignore = "0.4.26"
pulldown-cmark = "0.11"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
